# Vibration_Sensor

./: .gitmodules  CMakeLists.txt  README.md
components/ThingsBoard/src/: Espressif_MQTT_Client.h
main/: CMakeLists.txt  definitions.h  main.cpp
main/AcquisitionSubsystem/: AcquisitionSubsystem.cpp  AcquisitionSubsystem.hpp
main/AcquisitionSubsystem/ADXL345/: ADXL345.cpp  ADXL345.hpp
main/AcquisitionSubsystem/ADXL345/components/Adafruit_BusIO/: Adafruit_I2CDevice.cpp
main/BlockingQueue/: BlockingQueue.cpp  BlockingQueue.hpp
main/CommunicationSubsystem/: CommunicationSubsystem.cpp  CommunicationSubsystem.hpp
main/CommunicationSubsystem/Ethernet/: Ethernet.cpp  Ethernet.hpp
main/CommunicationSubsystem/MQTT/: MQTT.cpp
main/ComunicationSubsystem/: ComunicationSubsystem.cpp  ComunicationSubsystem.hpp
main/ComunicationSubsystem/Ethernet/: Ethernet.cpp  Ethernet.hpp
main/ComunicationSubsystem/MQTT/: MQTT.cpp  MQTT.hpp
main/FSM/: State.hpp
main/FSM/AwaitingMonitoring/: AwaitingMonitoring.cpp  AwaitingMonitoring.hpp
main/FSM/Monitoring/: Monitoring.cpp  Monitoring.hpp
main/FSM/StartingDevice/: StartingDevice.cpp  StartingDevice.hpp
main/ProcessingSubsystem/: ProcessingSubsystem.cpp  ProcessingSubsystem.hpp
main/ProcessingSubsystem/LowPassFilter/: LowPassFilter.cpp  LowPassFilter.hpp
main/VibrationSystem/: VibrationSystem.cpp  VibrationSystem.hpp
